@@ -165,9 +165,10 @@ int ti8x_file_read_regular(const char *filename, Ti8xRegular *content)
 	}
     else if(content->model == CALC_TI86) 
 	{
-      /* name may follow one of three conventions: padded with SPC bytes
+      /* name may follow one of four conventions: padded with SPC bytes
        * (most correct, generated by TI's software), padded with NULL bytes,
-       * or unpadded (like TI85).  TI's software accepts all three, so we should too.
+       * unpadded (like TI85) or partially padded (from the end).  
+	   * TI's software accepts all four, so we should too.
        */
        if(fskip(f, 3) < 0) goto tfrr;
        if(fread_byte(f, &name_length) < 0) goto tfrr;
@@ -175,8 +176,9 @@ int ti8x_file_read_regular(const char *filename, Ti8xRegular *content)
 
 	   if(name_length < 8)
 	   {
-		if(fread_byte(f, &test_pad) < 0) goto tfrr;
-		if(fskip(f, -1) < 0) goto tfrr;
+		   fskip(f, 8 - name_length - 1);
+		   fread_byte(f, &test_pad);
+		   fskip(f, -(8 - name_length));
 
 		if((test_pad == ' ') || (test_pad == '\0'))
 		{
@@ -213,6 +215,7 @@ int ti8x_file_read_regular(const char *filename, Ti8xRegular *content)
     if(fread_byte(f, &(entry->type)) < 0) goto tfrr;
     if (is_ti8586(content->model))
       if(fread_byte(f, &name_length) < 0) goto tfrr;
+    if(name_length > 8) return ERR_INVALID_FILE;
     if(fread_n_chars(f, name_length, varname) < 0) goto tfrr;
 	ticonv_varname_from_tifile_s(content->model_dst, varname, entry->name);
 	if((content->model == CALC_TI86) && padded86)
